--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,7 @@
   .navBarHover {
     @apply h-12 px-5 rounded-full flex items-center gap-2 hover:bg-hoverBg duration-300 cursor-pointer bg-transparent
   }
+  .navli {
+    @apply hover:underline underline-offset-2 cursor-pointer decoration-[1px] duration-200
+  }
 }
